# aiWatchdog

./: .gitignore  config.py  multi_modal_analyzer.py  prompt.py  pyproject.toml  readme.md  readme_en.md  requirements.txt  utility.py  video_server.py
src/: main.py
src/core/: app.py  logger.py
