[project]
name = "aiwatcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi==0.115.5",
    "httpx==0.27.2",
    "opencv-python==4.10.0.84",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "uvicorn==0.32.1",
]
